# Ecoute2

./: .editorconfig  .gitignore  README.md  build.gradle.kts  detekt.yml  ecoute-release.jks  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  repl.c
app/src/main/kotlin/com/ecoute/music/: Database.kt  MainApplication.kt
app/src/main/kotlin/com/ecoute/music/models/: Album.kt  Artist.kt  Event.kt  EventWithSong.kt  Format.kt  Info.kt  Lyrics.kt  Mood.kt  PipedSession.kt  Playlist.kt  PlaylistPreview.kt  PlaylistWithSongs.kt  QueuedMediaItem.kt  SearchQuery.kt  (+6 more)
app/src/main/python/: download.py  liked_songs.py
app/src/main/res/drawable/: expand.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-b+sr+Cyrl/: strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi-rIN/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v29/: themes.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh/: strings.xml
compose/persist/: build.gradle.kts
compose/preferences/: build.gradle.kts
compose/reordering/: build.gradle.kts
compose/routing/: build.gradle.kts
core/data/: build.gradle.kts
core/material-compat/: build.gradle.kts
core/ui/: build.gradle.kts
fastlane/metadata/android/en-US/: full_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  12.txt  13.txt  16.txt  17.txt  18.txt  19.txt  20.txt  5.txt  7.txt  8.txt
gradle/: libs.versions.toml
providers/innertube/: build.gradle.kts
(+261 files in other folders)
